# OpenGL_Render

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  OpenGL_Course.sln  OpenGL_Course.vcxproj  OpenGL_Course.vcxproj.filters  README.md  main.cpp
GLBufferObjects/: CMakeLists.txt
GLBufferObjects/include/: BufferObject.h  ElementBufferObject.h  VertexArrayObject.h  VertexBufferObject.h
GLBufferObjects/src/: ElementBufferObject.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
GLCamera/: CMakeLists.txt
GLCamera/include/: GLCamera.h
GLCamera/src/: GLCamera.cpp
GLShader/: CMakeLists.txt  resources.h.in
GLShader/include/: GLBaseShader.h  GLFragmentShader.h  GLShaderProgram.h  GLTexture.h  GLVertexShader.h  resources.h
GLShader/src/: GLBaseShader.cpp  GLShaderProgram.cpp  GLTexture.cpp
GLWindowManager/: CMakeLists.txt
GLWindowManager/include/: WindowManager.h
GLWindowManager/src/: WindowManager.cpp
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
OpenGLManager/: opengl_manager.cpp  opengl_manager.h
Shaders/: default.frag  default.vert  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
Util/: utility.cpp  utility.h
resources/shaders/: default.frag  default.vert  default2.frag
